# modal-ci-example

./: .coveragerc  .env.local  .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _modal_test.py  mkdocs.yaml  pyproject.toml  settings.py  setup.cfg  watchtest.py
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: publish.yaml  test.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20221213022230_5dd48aa497b9_namespace.py  20221214183909_d7fa3f2f4a1b_ns_topics.py  20221215070549_1393566cbef5_datasets.py  20221216203838_5483034a3320_uuid_isnt_optional_dataset_desc_is.py  20221230035021_d4c6ea8f7596_init.py  20230112040545_51252bb18e1f_init.py
docs/: building-workflows.md  contributing.md  deploy-to-modal.md  hudson-watch.md  index.md  quickstart.md  release-notes.md
docs/examples/: audio.md  building-websites.md  images.md  prompt-curation.md  tabular.md  text.md  video.md
docs_src/: quickstart-2.py  quickstart.py
docs_src/examples/: images.py  tabular.py  text.py  video.py
hudson/: __init__.py  _env.py  _modal.py  _modal_deploy.py  _types.py  cli.py  client.py  config.py  const.py  db.py  exc.py  models.py  settings.py  types.py
hudson/cli/: app.py  config.py  env.py  main.py  secret.py  token.py
hudson/client/: main.py
hudson/server/: config.py  log.py  main.py  routers.py  services.py  utils.py
hudson/server/routers/: health.py
modalci/: __init__.py  _modal_deploy.py  _modal_test.py  _types.py  cli.py  client.py  config.py  const.py  db.py  exc.py  models.py  settings.py
modalci/server/: log.py  main.py  routers.py  services.py  utils.py
scripts/: README.md  alembic-upgrade-head.sh  build-tailwind.sh  clean.sh  format.sh  install-tailwind.sh  install.sh  lint.sh  reset-test-db.sh  run-postgres.sh  run-uvicorn.sh  test.sh
static/: output.css
templates/: index.html
tests/: conftest.py  mocks.py  test_cli.py  test_client.py  test_config.py  test_env.py  test_home.py  test_log.py  test_main.py  test_server.py  test_server_datasets.py  test_server_health.py  test_server_ns.py  test_server_publish.py  test_server_subs.py  test_server_topics.py  test_version.py
