[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "hudson"
dynamic = [
    "version",
    "readme",
    "license",
]
description = "Simple, secure, and scalable orchestration for apps and data on Modal."
requires-python = ">=3.10"
dependencies = [
    "fastapi >=0.88.0",
    "httpx >=0.23.1",
    "modal-client >=0.41.477",
    "python-dotenv >=0.21.0",
    "rich >=12.6.0",
    "structlog >=22.3.0",
    "typer >=0.7.0",
    "uvicorn >=0.20.0",
    "sqlmodel >=0.0.5",
    "alembic >=1.7.4",
    "asyncpg >=0.27.0",
    "duckdb >=0.3.0",
    "datasets >=2.6.0",
    "docarray >=0.19.1",
    "greenlet >=2.0.1",
    "polars >=0.12.0",
]
[[project.authors]]
name = "Anthony Corletti"
email = "anthcor@gmail.com"

[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "pytest-asyncio >=0.16.0",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0",
]
dev = [
    "mypy >=0.991",
    "black >=22.10.0",
    "ruff >=0.0.166",
    "pre-commit >=2.17.0",
]
doc = [
    "mkdocs >=1.4.2",
    "mkdocs-material >=8.5.11",
    "mdx-include >=1.4.2",
]

[project.urls]
Home = "https://www.github.com/anthonycorletti/hudson"
Documentation = "https://hudson.corletti.xyz"

[project.scripts]
hudson = "hudson.cli.main:app"

[tool.ruff]
line-length = 88
ignore = [
    "D10",
    "D415",
]
target-version = "py310"
extend-select = [ "D" ]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.setuptools.dynamic.version]
attr = "hudson.__version__"
